src/objects/Category_Brands__c.object
<CustomObject>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <referenceTo>Brand_Master__c</referenceTo>
        <relationshipLabel>Category Brands</relationshipLabel>
        <relationshipName>Category_Brands</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Category Brands</relationshipLabel>
        <relationshipName>Category_Brands</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Category Brands</label>
    <nameField>
        <label>Category Brands Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Category Brands</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>